// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContentsList renders correctly with a label 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="collapsible mobileContainerStyles"
  >
    <div
      class="header"
    >
      <svg
        aria-label="Svg Caret Right Icon"
        aria-labelledby="react-aria-:r0:"
        class="Icon-module_yNB47q_icon icon"
        fill="none"
        height="16"
        role="img"
        slot="icon"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.796 7.321a.554.554 0 0 1 0 .858l-3.82 3.181c-.382.319-.976.058-.976-.429V4.57c0-.487.594-.748.976-.43z"
          fill="currentColor"
        />
      </svg>
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body colorScheme-module_uDd7va_auto"
        data-display="p"
      >
        On This Page
      </p>
    </div>
    <div
      class="listContainer"
    >
      <ul
        class="list mobileList"
      >
        <li>
          List Item 1
        </li>
        <li>
          List Item 2
        </li>
      </ul>
    </div>
  </div>
  <div
    class="desktopContainerStyles"
  >
    <p
      class="Text-module__2xN8W_text Text-module__2xN8W_heading6 colorScheme-module_uDd7va_auto"
      data-display="h6"
    >
      On This Page
    </p>
    <ul
      class="list"
    >
      <li>
        List Item 1
      </li>
      <li>
        List Item 2
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ContentsList renders correctly without a label 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="collapsible mobileContainerStyles"
  >
    <div
      class="header"
    >
      <svg
        aria-label="Svg Caret Right Icon"
        aria-labelledby="react-aria-:r1:"
        class="Icon-module_yNB47q_icon icon"
        fill="none"
        height="16"
        role="img"
        slot="icon"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.796 7.321a.554.554 0 0 1 0 .858l-3.82 3.181c-.382.319-.976.058-.976-.429V4.57c0-.487.594-.748.976-.43z"
          fill="currentColor"
        />
      </svg>
      <p
        class="Text-module__2xN8W_text Text-module__2xN8W_body colorScheme-module_uDd7va_auto"
        data-display="p"
      >
        On This Page
      </p>
    </div>
    <div
      class="listContainer"
    >
      <ul
        class="list mobileList"
      >
        <li>
          List Item 1
        </li>
        <li>
          List Item 2
        </li>
      </ul>
    </div>
  </div>
  <div
    class="desktopContainerStyles"
  >
    <p
      class="Text-module__2xN8W_text Text-module__2xN8W_heading6 colorScheme-module_uDd7va_auto"
      data-display="h6"
    >
      On This Page
    </p>
    <ul
      class="list"
    >
      <li>
        List Item 1
      </li>
      <li>
        List Item 2
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
